ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ac48167b242a346dfa761105b933db5d-744876516.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: homeapp-service
            port:
              number: 80
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: mobileapp-service
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
